# owt-client-native

./: .clang-format  .gitignore  .gn  BUILD.gn  CODE_OF_CONDUCT.md  DEPS  README.md  README.webtransport  merge_debug.bat  merge_debug_x64.bat  merge_release.bat  merge_release_x64.bat  thirdpartylicense.txt
build_overrides/: build.gni  owt.gni  partition_alloc.gni  webrtc.gni
build_overrides/ssl/: BUILD.gn  ssl.gni
talk/ics/: BUILD.gn
talk/ics/docs/cpp/: cpp.md  doxygen_c++.conf  gendoc.sh
talk/ics/docs/ios/: copyheader.py  doxygen_ios.conf  ios.md
talk/ics/include/msdk/: d3d_allocator.h  mfx_samples_config.h  mfxastructures.h  mfxplugin.h  mfxvideo.h  plugin_loader.h  plugin_utils.h  sample_defs.h  sample_utils.h
talk/ics/patches/: 0001-Use-OpenSSL-for-usrsctp.patch  0002-Use-OpenSSL-for-libsrtp.patch  0003-Start-iOS-simulator-before-running-tests.patch  0004-Remove-webrtc_overrides.patch  0005-Suppress-some-warnings-and-disable-thin-archieve.patch  0005-Turn-off-user-defined-warnings.patch  0006-Adjusted-jni_generator.py-to-fit-ICS-code-structure.patch  0007-Disable-thin-archive-and-isystem-for-linux.patch  0008-ios-Various-build-fixes-for-Xcode-10.patch  readme.md
talk/ics/sdk/base/: customizedaudiocapturer.cc  customizedaudiocapturer.h  customizedaudiodevicemodule.cc  customizedaudiodevicemodule.h  customizedencoderbufferhandle.h  customizedframescapturer.cc  customizedframescapturer.h  customizedvideodecoderfactory.cc  customizedvideodecoderfactory.h  customizedvideodecoderproxy.cc  customizedvideodecoderproxy.h  customizedvideoencoderproxy.cc  customizedvideoencoderproxy.h  desktopcapturer.cc  desktopcapturer.h  deviceutils.cc  encodedvideoencoder.cc  encodedvideoencoder.h  encodedvideoencoderfactory.cc  encodedvideoencoderfactory.h  eventtrigger.h  exception.cc  functionalobserver.cc  functionalobserver.h  globalconfiguration.cc  localcamerastreamparameters.cc  logging.cc  logsinks.cc  logsinks.h  mediaconstraintsimpl.h  mediautils.cc  mediautils.h  mediautils_unittest.cc  nativehandlebuffer.h  peerconnectionchannel.cc  peerconnectionchannel.h  peerconnectiondependencyfactory.cc  peerconnectiondependencyfactory.h  sdputils.cc  sdputils.h  (+9 more)
talk/ics/sdk/conference/: conferenceclient.cc  conferenceexception.cc  conferencepeerconnectionchannel.cc  conferencepeerconnectionchannel.h  remotemixedstream.cc  (+5 more)
talk/oms/: BUILD.gn
talk/oms/include/: sio_client.h  sio_message.h  sio_socket.h
talk/oms/patches/: 0001-Use-OpenSSL-for-usrsctp.patch  0002-Use-OpenSSL-for-libsrtp.patch  0003-Start-iOS-simulator-before-running-tests.patch  0005-Fixed-compile-issue-and-disable-thin-archive.patch  0005-Suppress-some-warnings-and-disable-thin-archieve.patch  0006-Adjusted-jni_generator.py-to-fit-ICS-code-structure.patch  0006-Adjusted-jni_generator.py-to-fit-OMS-code-structure.patch  0008-ios-Various-build-fixes-for-Xcode-10.patch  readme.md  vp8_1080p_encoding.patch
talk/owt/: BUILD.gn
talk/owt/docker/: Dockerfile
talk/owt/include/: sio_client.h  sio_message.h  sio_socket.h
talk/owt/patches/: 0001-Export-WebRTC-symbols-on-iOS.patch  0001-Export-symbols-of-jsoncpp.patch  0001-Export-symbols-of-libyuv.patch  0001-Use-OpenSSL-for-usrsctp.patch  0002-Enable-C-20-on-iOS.patch  0002-Use-OpenSSL-for-libsrtp.patch  0003-Enable-C-20-for-all-platforms-but-LaCrOS-and-Fuchsia.patch  0003-Enable-Wunused-but-set-variable.patch  0004-Remove-webrtc_overrides.patch  0005-Apply-Wno-shadow-for-clang-only.patch  0005-Fixed-compile-issue-and-disable-thin-archive.patch  0006-Adjusted-jni_generator.py-to-fit-OWT-code-structure.patch  0007-Fix-examples-path-error.patch  0008-Disable-loop-range-analysis-when-build-with-Xcode-cl.patch  0009-Add-Visual-Studio-2019-and-Preview-edition-support.patch  0009-Fix-compile-issue-for-linux-g-build.patch  0010-Remove-telemetry.patch  0010-Restore-is_ash-for-backward-compatible.patch  0010-Roll-clang-llvmorg-18-init-12938-geb1d5065.patch  0010-mac-make-find_sdk.py-work-when-the-sdk-goes-to-11.patch  0011-Suppress-some-warnings-for-clang-18.patch  0011-libjpeg_turbo-fix-for-CVE-2018-20330-and-19664.patch  0012-ios-Adds-CFBundleShortVersionString-to-the-plist-for.patch  0013-Remove-unused-gni-for-av1-build.patch  0014-Fix-missing-ffmpeg-configure-item-for-msvc-build.patch  0015-Disable-x86-msvc-optimization.patch  0015-Remove-custom-d8-dependency.patch  0015-vp9-add-rate-control-interface-for-RTC.patch  0016-Build-libvpx-with-RTC-rate-control-impl-included.patch  0016-Remove-deprecated-create_srcjar-property.patch  0017-Build-libvpx-with-RTC-rate-control-impl-included.patch  0018-Enable-msvcrt-switch.patch  0018-Patch-ffmpeg-to-address-security-issues.patch  0018-Support-wasm-build.patch  0018-Update-GN-files-for-wasm.patch  0019-Support-wasm-build.patch  0019-Update-GN-files-for-wasm-build.patch  0021-Allow-third-party-repositories-to-disable-C-20-for-M.patch  0023-Fix-FFMPEG-config-for-MSVC-build.patch  0024-Getting-install-build-deps-to-work-on-Ubuntu-22.04-L.patch  (+3 more)
talk/woogeen/: BUILD.gn  woogeen.gyp  woogeen_samples.gyp
talk/woogeen/docs/: index.md
talk/woogeen/include/: asio_token.h  sio_message.h
talk/woogeen/patches/: 0001-Use-OpenSSL-for-usrsctp.patch  0004-Xcode-9-support.patch  androiddistjar.patch  ios.gn  iossim.patch  iossim1.patch  iossim2.patch  libsrtp.gn  libsrtp.gyp  libvpx.gn  readme.md  usrsctp.gn  usrsctp.gyp  vp8_1080p_encoding.patch
talk/woogeen/samples/: ConfSample.cpp  P2PSample.cpp  conferenceobserver.cc  conferenceobserver.h  conferencesample.cc  conferencesample.cpp  conferencesampleforwardobserver.cc  conferencesampleforwardobserver.h  conferencesampleobserver.cc  conferencesampleobserver.h  dfbvideorenderer.cc  dfbvideorenderer.h  directframegenerato.cc  directframegenerator.cc  directframegenerator.h  directvideodecoder.cc  directvideodecoder.h  drmvideorenderer.cc  drmvideorenderer.h  encodedframegenerator.cc  encodedframegenerator.h  fileaudioframegenerator.cc  fileaudioframegenerator.h  fileframegenerator.cc  fileframegenerator.h  p2psample.cc  p2psocketsignalingchannel.cpp  p2psocketsignalingchannel.h  testclient.cc
(+1304 files in other folders)
