# Copyright (C) <2018> Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0
import("third_party/webrtc/webrtc.gni")
group("default") {
  testonly = true
  deps = []
  if (!is_linux) {
    deps += [
      "//third_party/webrtc/examples",
    ]
  }
  if (is_ios) {
    deps += [ "//talk/oms:oms_sdk_objc" ]
  } else {
    deps += [ "//talk/oms" ]
  }
  if (woogeen_include_tests) {
    deps += [ "talk/oms:woogeen_tests" ]
  }
}
