# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This is needed for backwards-compatibility w/ the WebRTC repo for
# the build_with_chromium flag.
import("//build_overrides/build.gni")
import("//build_overrides/ssl/ssl.gni")

# Exclude pulse audio on Chromium since its prerequisites don't require
# pulse audio.
rtc_include_pulse_audio = false
rtc_use_x11 = false
use_ozone = true
# Exclude internal ADM since Chromium uses its own IO handling.
rtc_include_internal_audio_device = true

# Don't include WebRTC tests.
rtc_include_tests = false

# By default enable internal codecs.
rtc_use_builtin_sw_codecs = true

if (owt_include_tests) {
  rtc_include_tests = true
}
