# Copyright (c) 2016 Intel Corporation. All rights reserved.

import("ssl.gni")

if (woogeen_use_openssl) {
  config("external_openssl") {
    assert(
        woogeen_openssl_header_root != "",
        "You must specify woogeen_openssl_header_root when woogeen_use_openssl==true.")
    assert(
        woogeen_openssl_lib_root != "",
        "You must specify woogeen_openssl_lib_root when woogeen_use_openssl==true.")
    include_dirs = [ woogeen_openssl_header_root ]
    lib_dirs = [ woogeen_openssl_lib_root ]
    if (is_ios) {
      libs = [
        "crypto",
        "ssl",
      ]
    } else if (is_win) {
      libs = [
        "libcrypto.lib",
        "libssl.lib",
      ]

      if (is_clang) {
        defines = [ "__GNUC__" ]
      }
    } else {
      assert(false, "External OpenSSL only supported on iOS and Windows.")
    }
    if (is_clang) {
      cflags = [ "-Wno-deprecated-declarations" ]
    }
  }
}
